<resources>
    <string name="app_name">TestDatabase</string>
    <string name="enter_text">Enter text</string>
    <string name="submit">Submit</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="coordinates">Coordinates</string>
    <string name="start1">Start</string>
    <string name="stop1">Stop</string>
    <string name="start2">Start</string>
    <string name="stop2">Stop</string>
    <string name="coordinates3">Coordinates</string>
    <string name="wifi_data3">WiFi Data</string>
    <string name="start3">Start</string>
    <string name="stop3">Stop</string>
    <string name="coordinates5">Coordinates</string>
    <string name="wifi_rssi5">WiFi RSSI</string>
    <string name="start5">Start</string>
    <string name="stop5">Stop</string>
    <string name="coordinates_will_be_shown_here">Coordinates will be shown here</string>
    <string name="wifi_details_will_be_shown_here">WiFi details will be shown here</string>
    <string name="start6">Start</string>
    <string name="stop6">Stop</string>
    <string name="coordinates_will_be_shown_here1">Coordinates will be shown here</string>
    <string name="wifi_details_will_be_shown_here1">WiFi details will be shown here</string>
    <string name="data_collecting_in_process1">Data Collecting in Process...</string>
    <string name="start7">Start</string>
    <string name="stop7">Stop</string>
    <string name="network_scanning">Network Scanning...</string>
    <string name="coordinates_will_be_shown_here2">Coordinates will be shown here</string>
    <string name="wifi_details_will_be_shown_here2">WiFi details will be shown here</string>
    <string name="start8">Start</string>
    <string name="stop8">Stop</string>
    <string name="network_scanning2">Network Scanning...</string>
    <string name="coordinates_will_be_shown_here3">Coordinates will be shown here</string>
    <string name="wifi_details_will_be_shown_here3">WiFi details will be shown here</string>
    <string name="start9">Start</string>
    <string name="stop9">Stop</string>
    <string name="stop10">Stop</string>
    <string name="network_scanning3">Network Scanning...</string>
    <string name="coordinates_will_be_shown_here4">Coordinates will be shown here</string>
    <string name="wifi_details_will_be_shown_here4">WiFi details will be shown here</string>
    <string name="start11">Start</string>
    <string name="stop12">Stop</string>
    <string name="status">Status</string>
    <string name="enter_floor">Enter Floor</string>
    <string name="select_save_directory">Select Save Directory</string>
    <string name="no_directory_selected">No directory selected</string>
    <string name="no_directory_selected1">No directory selected</string>
    <string name="selected_directory_not_selected">Selected Directory: Not selected</string>
    <string name="select_save_directory1">Select Save Directory</string>
    <string name="enter_floor1">Enter Floor</string>
    <string name="enter_device_name">Enter Device Name</string>
    <string name="settings">Settings</string>
    <string name="select_save_directory2">Select Save Directory</string>
    <string name="no_directory_selected2">No Directory Selected</string>
    <string name="android_id">Android ID:</string>

</resources>