<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/android_id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_id"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/select_directory_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_save_directory2" />

    <TextView
        android:id="@+id/selected_directory_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_directory_selected2" />

</LinearLayout>
