<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/appBackgroundColor"
    tools:context=".MainActivity">

    <!--    <Button-->
<!--        android:id="@+id/select_directory_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/select_save_directory1"-->
<!--        android:padding="12dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/selected_directory_text_view"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/selected_directory_not_selected"-->
<!--        android:textSize="16sp"-->
<!--        android:padding="8dp" />-->

    <TextView
        android:id="@+id/status_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/status"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/coordinates_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/coordinates_will_be_shown_here4"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/status_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

<!--    <TextView-->
<!--        android:id="@+id/wifi_text_view"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/textview_border"-->
<!--        android:gravity="center"-->
<!--        android:padding="8dp"-->
<!--        android:text="@string/wifi_details_will_be_shown_here4"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/coordinates_text_view"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="16dp" />-->

    <EditText
        android:id="@+id/floor_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_floor1"
        android:inputType="number"
        android:padding="8dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/coordinates_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

<!--    <EditText-->
<!--        android:id="@+id/device_name_edit_text"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:autofillHints=""-->
<!--        android:hint="@string/enter_device_name"-->
<!--        android:inputType="text"-->
<!--        android:padding="8dp"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/floor_edit_text"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="16dp" />-->
    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/floor_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="?android:attr/progressBarStyleLarge" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/start11"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/loading_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/stop12"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/start_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/settings"
        android:src="@android:drawable/ic_menu_manage"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
